prefix all non-public classes with _